Fixed spacing issues in activities
Former-commit-id: 0a99c6b0b6a3241a734a2c604fbf45a40fb999f2

--- a/css/custom.css
+++ b/css/custom.css
@@ -241,14 +241,14 @@ header {
  height: 40px;
 }
 
-.first > div{
+.first {
   border-color: transparent;
   border: 2px;
   border-style: dashed;
   color: transparent;
 }
 
-.second > div{
+.second {
   border-color: transparent;
   border: 2px;
   border-style: dashed;
